# min-var-ci

./: .ghci  .project-settings.yml  analysis-app.cabal  data.txt  skelmer.txt
analysis-app/: .ghci  README.md  analysis-app.cabal  mymusic.csv
analysis-app/config/: routes
analysis-app/src/: UserParameters.hs
analysis-app/src/Data/Conduit/: Analysis.hs
analysis-app/src/DataAnalysis/Application/: Dispatch.hs  Foundation.hs  Params.hs  Prelude.hs  Types.hs
analysis-app/src/DataAnalysis/Application/Handler/: Datasets.hs  Datasources.hs  Export.hs  Import.hs  Review.hs  StartTime.hs
analysis-app/src/DataAnalysis/Application/Types/: Stock.hs
analysis-app/src/Demo/: Common.hs  RSI.hs
analysis-app/src/Demo/Helper/: Class.hs
analysis-app/src/main/: Analysis.hs  Main.hs  Params.hs  Parser.hs  Types.hs
analysis-app/templates/: datasets.hamlet  datasources.hamlet  default-layout-wrapper.hamlet  default-layout.lucius  import.hamlet  preview.hamlet  review.hamlet  review.julius  review.lucius
analysis-app/test/Data/Conduit/: AnalysisSpec.hs
config/: routes
data/import-wizard/: skel.tgz
import-wizard/: README.md
import-wizard/src/FP/ImportWizard/: Foundation.hs  Generate.hs  Import.hs  Main.hs  SourceWizard.hs  Temp.hs  Wizard.hs
import-wizard/src/FP/ImportWizard/Handler/: AddSource.hs  Home.hs
scripts/: make-skel  restart
src/: PharmaUserAnalysis.hs  PharmaUserParams.hs  UserAnalysis.hs  UserModel.hs  UserParameters.hs
src/Data/CSV/Conduit/: Persist.hs
src/Data/Conduit/: Analysis.hs  Equal.hs
src/Data/Conduit/Zlib/: Auto.hs
src/DataAnalysis/: Library.hs
src/DataAnalysis/Application/: Analyze.hs  Dispatch.hs  Foundation.hs  Import.hs  Params.hs  PharmaImport.hs  Prelude.hs  Types.hs
src/DataAnalysis/Application/Handler/: Export.hs  Import.hs  Review.hs
src/DataAnalysis/Application/Types/: Dummy.hs  Stock.hs
src/FP/ImportWizard/: Foundation.hs  Generate.hs  Main.hs  SourceWizard.hs  Types.hs  Wizard.hs
src/FP/ImportWizard/Handler/: Home.hs
src/Skel/Custom/: UserAnalysis.hs  UserModel.hs  UserParameters.hs
src/Skel/Kmer/: Main.hs  UserAnalysis.hs  UserParameters.hs
src/Skel/MVP/: Main.hs  UserAnalysis.hs  UserModel.hs  UserParameters.hs
src/Skel/Pharma/: Main.hs  UserAnalysis.hs  UserModel.hs  UserParameters.hs
src/Skel/RSI/: Main.hs  UserAnalysis.hs  UserModel.hs  UserParameters.hs
src/main/: Main.hs  PharmaMain.hs  RSIMain.hs
templates/: default-layout-wrapper.hamlet  import.hamlet  review.hamlet  review.julius  review.lucius
test/Data/Conduit/: AnalysisSpec.hs
