name:                analysis-app
version:             0.0.0
synopsis:            Analysis web app.
description:         Analysis web app.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2014 FP Complete
category:            Analysis
build-type:          Simple
cabal-version:       >=1.8

flag build-pharma
    default:       False

flag build-rsi
    default:       False

flag build-mvp
    default:       True

flag build-kmer
    default:       False

flag build-wizard
    default:       False

library
  hs-source-dirs:    src
  ghc-options:       -Wall -O2
  exposed-modules:   DataAnalysis.Application.Prelude
                     DataAnalysis.Application.Handler.Home
                     DataAnalysis.Application.Handler.Review
                     DataAnalysis.Application.Handler.Export
                     DataAnalysis.Application.Handler.Help
                     DataAnalysis.Application.Handler.Import
                     DataAnalysis.Application.Handler.StartTime
                     DataAnalysis.Application.Handler.Datasources
                     DataAnalysis.Application.Foundation
                     DataAnalysis.Application.Types
                     DataAnalysis.Application.Dispatch
                     DataAnalysis.Application.Analyze
                     DataAnalysis.Library
                     Data.Conduit.Analysis
                     Data.CSV.Conduit.Persist
  build-depends:     SHA >= 1.6.4,
                     lifted-base >= 0.2.1.1,
                     monad-logger >= 0.3.4.0,
                     persistent-sqlite >= 2.0.0,
                     http-client-tls >= 0.2.0.0,
                     yesod-core >= 1.2.6.4,
                     zlib-conduit >= 1.0.0,
                     http-types >= 0.8.3,
                     xml-conduit >= 1.1.0.0,
                     xml-types >= 0.3.4,
                     basic-prelude >= 0.3.6.0,
                     persistent >= 2.0.0,
                     persistent-template >= 2.0.0,
                     http-client >= 0.2.0.0,
                     aeson >= 0.6.2.0,
                     filepath >= 1.3.0.0,
                     old-time >= 1.1.0.0,
                     blaze-markup >= 0.5.1.0,
                     hamlet >= 1.1.7.0,
                     hashable >= 1.2.1.0,
                     semigroups >= 0.12.1,
                     transformers >= 0.3.0.0,
                     unordered-containers >= 0.2.3.0,
                     blaze-builder >= 0.3.3.0,
                     resourcet >= 0.4.10,
                     http-conduit >= 2.0.0.0,
                     yesod-static >= 1.2.2.0,
                     safe >= 0.3.3,
                     filepath >= 1.3.0.0,
                     old-time >= 1.1.0,
                     directory >= 1.1.0,
                     base >= 4 && <5,
                     yesod,
                     hamlet,
                     text,
                     containers,
                     data-default,
                     bytestring,
                     stm,
                     blaze-markup,
                     conduit,
                     aeson,
                     ghc-prim,
                     time,
                     lens,
                     old-locale,
                     yesod-static,
                     csv-conduit,
                     blaze-builder,
                     http-conduit,
                     tagged,
                     resourcet,
                     http-client,
                     vector,
                     unordered-containers,
                     transformers,
                     semigroups,
                     hashable,
                     safe,
                     double-conversion,
                     transformers-base,
                     primitive,
                     template-haskell,
                     double-conversion,
                     mtl,
                     random,
                     storable-complex ,
                     primitive,
                     vector,
                     hmatrix,
                     hmatrix-gsl-stats,
                     hstatistics

executable analysis-app-mvp
  if !flag(build-mvp)
    buildable: False
  hs-source-dirs:    src src/Skel/MVP
  ghc-options:       -Wall -O2 -main-is Skel.MVP.Main
  main-is:           Main.hs
  extra-libraries:   gsl gslcblas lapack blas
  build-depends:     SHA >= 1.6.4,
                     lifted-base >= 0.2.1.1,
                     monad-logger >= 0.3.4.0,
                     persistent-sqlite >= 2.0.0,
                     http-client-tls >= 0.2.0.0,
                     yesod-core >= 1.2.6.4,
                     zlib-conduit >= 1.0.0,
                     http-types >= 0.8.3,
                     xml-conduit >= 1.1.0.0,
                     xml-types >= 0.3.4,
                     basic-prelude >= 0.3.6.0,
                     persistent >= 2.0.0,
                     persistent-template >= 2.0.0,
                     http-client >= 0.2.0.0,
                     aeson >= 0.6.2.0,
                     filepath >= 1.3.0.0,
                     old-time >= 1.1.0.0,
                     blaze-markup >= 0.5.1.0,
                     hamlet >= 1.1.7.0,
                     hashable >= 1.2.1.0,
                     semigroups >= 0.12.1,
                     transformers >= 0.3.0.0,
                     unordered-containers >= 0.2.3.0,
                     blaze-builder >= 0.3.3.0,
                     resourcet >= 0.4.10,
                     http-conduit >= 2.0.0.0,
                     yesod-static >= 1.2.2.0,
                     safe >= 0.3.3,
                     directory >= 1.1.0,
                     base >= 4 && <5,
                     text,
                     data-default,
                     persistent,
                     persistent-template,
                     time,
                     lens,
                     old-locale,
                     conduit,
                     csv-conduit,
                     bytestring,
                     lens,
                     yesod,
                     vector,
                     tagged,
                     containers,
                     double-conversion,
                     template-haskell,
                     transformers-base,
                     primitive,
                     basic-prelude,
                     mtl,
                     random,
                     storable-complex,
                     primitive,
                     vector,
                     hmatrix,
                     hmatrix-gsl-stats,
                     hstatistics
