name:                analysis-app
version:             0.0.0
synopsis:            Analysis web app.
description:         Analysis web app.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2014 FP Complete
category:            Analysis
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  ghc-options:       -Wall -O2
  exposed-modules:   DataAnalysis.Application.Prelude
                     DataAnalysis.Application.Handler.Home
                     DataAnalysis.Application.Handler.Review
                     DataAnalysis.Application.Handler.Help
                     DataAnalysis.Application.Handler.Import
                     DataAnalysis.Application.Handler.Datasets
                     DataAnalysis.Application.Foundation
                     DataAnalysis.Application.Types
                     DataAnalysis.Application.Dispatch
  build-depends:     base >= 4 && <5,
                     yesod,
                     hamlet,
                     text,
                     containers,
                     data-default,
                     bytestring,
                     stm,
                     blaze-markup,
                     conduit,
                     aeson,
                     ghc-prim,
                     time

executable analysis-app
  hs-source-dirs:    src/main
  ghc-options:       -Wall -O2
  main-is:           Main.hs
  build-depends:     base >= 4 && <5,
                     analysis-app,
                     text,
                     data-default,
                     persistent-template,
                     time,
                     lens,
                     old-locale,
                     conduit,
                     csv-conduit,
                     bytestring
